--- a/Backend/Service/pom.xml
+++ b/Backend/Service/pom.xml
@@ -40,6 +40,11 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.2.32</version>
+        </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
