--- a/Backend/Gateway/src/main/resources/application.properties
+++ b/Backend/Gateway/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=8081
+spring.application.name=gateway-zuul
+#https://medium.com/@marcus.eisele/spring-boot-microservices-part-six-the-gateway-service-netflix-zuul-55f8d97b731d
+zuul.ignored-services=*
+zuul.routes.students-service.path=/students/**
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+zuul.routes.students-service.sensitive-headers=Cookie,Set-Cookie
+zuul.routes.auth-service.path=/auth/**
+zuul.routes.auth-service.service-id=auth-service
+
+zuul.routes.auth-service.strip-prefix=false
+zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
