--- a/Backend/Service/src/main/resources/application.properties
+++ b/Backend/Service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.root=INFO
-spring.application.name=Persons-Service
+spring.application.name=Students-Service
 server.port=8080
 eureka.client.service-url.defaultZone=http://192.168.10.167:8761/eureka
 eureka.instance.prefer-ip-address=true
