--- a/Backend/Service/src/main/resources/application.properties
+++ b/Backend/Service/src/main/resources/application.properties
@@ -8,17 +8,17 @@ management.endpoints.web.exposure.include=*
 spring.cloud.loadbalancer.ribbon.enabled=false
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.url= jdbc:mysql://localhost:3306/cvBank?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url= jdbc:mysql://localhost:3306/students?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=root
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = update
 
 ## Hibernate Logging
-#logging.level.org.hibernate.SQL= DEBUG
+logging.level.org.hibernate.SQL= DEBUG
 
 
 ## MULTIPART (MultipartProperties)
